--- a/pom.xml
+++ b/pom.xml
@@ -221,8 +221,14 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- Mail -->
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 
+		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.9.1</version>
